Make Vercel build static assets explicitly to fix root route

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,23 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "api/*.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "index.html",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "script.js",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "style.css",
+      "use": "@vercel/static"
+    }
+  ],
   "routes": [
     {
       "handle": "filesystem"
